--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ orbs:
       command: .circleci/run.sh
     - run:
       name: Trigger conan build
-      command: curl --user edee14237be82c217cbd25e1b41c5e2bada40579: \
+      command: curl --user ${CIRCLE_API_USER_TOKEN}: \
                 --data build_parameters[CIRCLE_JOB]=build_conan \
                 --data revision=$CIRCLE_SHA1 \
                 https://circleci.com/api/v1.1/project/github/mdizhas/allynet-automation/tree/circleci-project-setup
@@ -35,6 +35,13 @@ workflows:
       -- gcc-9
       -- xcode10
 
+machine:
+  environment:
+    CIRCLE_API_USER_TOKEN: "edee14237be82c217cbd25e1b41c5e2bada40579"
+    BROWSERSTACK_USERNAME: "mohammedizhas_DqiMzA"
+    BROWSERSTACK_ACCESS_KEY: "FjApp8QYJfjajQsQyw6N"
+    BROWSERSTACK_LOCAL: false
+    BROWSERSTACK_LOCAL_IDENTIFIER: "identifier"
 
 # # Invoke jobs via workflows
 # # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
