--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ orbs:
       command: .circleci/run.sh
     - run:
       name: Trigger conan build
-      command: curl --user ${CIRCLE_API_USER_TOKEN}: \
+      command: curl --user ${CIRCLE_API_USER_TOKEN} \
                 --data build_parameters[CIRCLE_JOB]=build_conan \
                 --data revision=$CIRCLE_SHA1 \
                 https://circleci.com/api/v1.1/project/github/mdizhas/allynet-automation/tree/circleci-project-setup
