--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,13 +21,11 @@ orbs:
 jobs:
   test:
     docker:
-      - image: cimg/<language>:<version TAG>
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+      - image: cimg/node:14.15.4
     steps:
       - checkout
-      - run: echo "this is the test job"
+      - run: echo "We are trying to execute automation script from another repo."
+      - run: node --version
           
   # xcode10:
   #   steps:
