--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,16 @@ jobs:
       - checkout
       - run: echo "We are trying to execute automation script from another repo."
       - run: node --version
+  test-auto:
+    docker: 
+      - image: conanio/clang10
+    steps:
+      - checkout
+      - run: .circleci/run.sh
+      - run: curl --user ${CIRCLE_API_USER_TOKEN} \
+                --data build_parameters[CIRCLE_JOB]=build_conan \
+                --data revision=$CIRCLE_SHA1 \
+                https://circleci.com/api/v1.1/project/github/mdizhas/allynet-automation/tree/circleci-project-setup
           
   # xcode10:
   #   steps:
@@ -43,6 +53,7 @@ workflows:
   build_and_test:
     jobs:
       - test
+      - test-auto
 
 machine:
   environment:
