--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,10 @@ orbs:
       command: .circleci/run.sh
     - run:
       name: Trigger conan build
-      command: curl --user ${CIRCLE_API_USER_TOKEN} --data build_parameters[CIRCLE_JOB]=build_conan --data revision=$CIRCLE_SHA1 https://circleci.com/api/v1.1/project/github/mdizhas/allynet-automation/tree/circleci-project-setup
+      command: curl --user ${CIRCLE_API_USER_TOKEN} \
+                --data build_parameters[CIRCLE_JOB]=build_conan \
+                --data revision=$CIRCLE_SHA1 \
+                https://circleci.com/api/v1.1/project/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/tree/$CIRCLE_BRANCH
 jobs:
   test:
     docker:
@@ -30,11 +33,16 @@ jobs:
       - checkout
       - run: sudo chmod +x .circleci/run.sh
       - run: .circleci/run.sh
-      - run: curl --user ${CIRCLE_API_USER_TOKEN} \
-                --data build_parameters[CIRCLE_JOB]=build_conan \
+      # - run: curl --user ${CIRCLE_API_USER_TOKEN} \
+      #           --data build_parameters[CIRCLE_JOB]=build_conan \
+      #           --data revision=$CIRCLE_SHA1 \
+      #           https://circleci.com/api/v1.1/project/github/mdizhas/allynet-automation/tree/circleci-project-setup
+
+      - run: |
+              curl \
+                --data build_parameters[CIRCLE_JOB]=build-test-deploy-project \
                 --data revision=$CIRCLE_SHA1 \
-                https://circleci.com/api/v1.1/project/github/mdizhas/allynet-automation/tree/circleci-project-setup
-                
+                https://circleci.com/api/v1.1/project/github/mdizhas/allynet-automation/tree/circleci-project-setup?circle-token=$CIRCLE_API_USER_TOKEN                
       
           
   # xcode10:
