--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
 
       - run: |
               curl \
-                --data build_parameters[CIRCLE_JOB]=build-test-deploy-project \
+                --data build_parameters[CIRCLE_JOB]=node/test \
                 --data revision=$CIRCLE_SHA1 \
                 https://circleci.com/api/v1.1/project/github/mdizhas/allynet-automation/tree/circleci-project-setup?circle-token=$CIRCLE_API_USER_TOKEN                
                
