--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,7 @@ machine:
     BROWSERSTACK_ACCESS_KEY: "FjApp8QYJfjajQsQyw6N"
     BROWSERSTACK_LOCAL: false
     BROWSERSTACK_LOCAL_IDENTIFIER: "identifier"
+    CIRCLE_SHA1: "2802c962d2ea9f5aeb864f5f6aed5dc672534ccd"
 
 # # Invoke jobs via workflows
 # # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
