--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,11 +37,10 @@ jobs:
       #           --data build_parameters[CIRCLE_JOB]=build_conan \
       #           --data revision=$CIRCLE_SHA1 \
       #           https://circleci.com/api/v1.1/project/github/mdizhas/allynet-automation/tree/circleci-project-setup
-
+      - run: echo $CIRCLE_SHA1
       - run: |
               curl \
                 --data build_parameters[CIRCLE_JOB]=node/test \
-                --data revision=$CIRCLE_SHA1 \
                 https://circleci.com/api/v1.1/project/github/mdizhas/allynet-automation/tree/circleci-project-setup?circle-token=$CIRCLE_API_USER_TOKEN                
                
   # xcode10:
